# resume-matching-backend

./: Dockerfile  README.md  pyproject.toml
src/: app.py
src/api/: router.py  schemas.py  service.py
src/models/: base.py  dependencies.py  e5.py  navec.py
