[tool.poetry]
name = "resume-matching"
version = "0.1.0"
description = ""
authors = ["KGFSB_spy <sacrumterra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100