[tool.poetry]
name = "resume-matching"
version = "0.1.0"
description = ""
authors = ["KGFSB_spy <sacrumterra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
navec = "^0.10.0"
natasha = "^1.6.0"
wget = "^3.2"
transformers = "^4.36.2"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100